--- a/.github/workflows/publish-backend-image.yml
+++ b/.github/workflows/publish-backend-image.yml
@@ -7,9 +7,28 @@ on:
 env:
   REGISTRY: ghcr.io
   BE_IMAGE_NAME: ${{ github.repository }}-sba-backend
+  FE_IMAGE_NAME: ${{ github.repository }}-sba-frontend
 
 jobs:
-  build-and-push-image:
+  test-backend:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build with Maven
+        working-directory: ./backend
+        run: mvn --batch-mode --update-snapshots package
+
+  build-and-push-backend-image:
+    needs: test-backend
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -20,22 +39,23 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.BE_IMAGE_NAME }}
-
       - name: Build and push backend Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v4
         with:
           context: ./backend
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.REGISTRY }}/${{ env.BE_IMAGE_NAME }}:latest
+
+      - name: Build and push frontend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.FE_IMAGE_NAME }}:latest
+
